--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "cypress": "^10.7.0",
+    "cypress-real-events": "^1.7.1",
     "esbuild": "^0.15.5",
     "esbuild-clean-plugin": "^1.0.0",
     "esbuild-copy-static-files": "^0.1.0",
