--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,9 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
+    env:
+      NODE_ENV: test
+
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
