--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,10 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 16
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
