--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r501",
+  "version": "1.0.0-r519",
   "main": "src/index.jsx",
   "homepage": "https://github.com/bldrs-ai/Share",
   "bugs": {
@@ -33,6 +33,7 @@
     "@mui/styled-engine": "^5.8.7",
     "@mui/styles": "^5.9.2",
     "@octokit/rest": "^19.0.3",
+    "@tweenjs/tween.js": "^18.6.4",
     "clsx": "^1.2.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
