--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r557",
+  "version": "1.0.0-r555",
   "main": "src/index.jsx",
   "homepage": "https://github.com/bldrs-ai/Share",
   "bugs": {
@@ -34,6 +34,7 @@
     "@mui/styles": "^5.9.2",
     "@octokit/rest": "^19.0.3",
     "clsx": "^1.2.1",
+    "json2csv": "^5.0.7",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -44,6 +45,7 @@
     "three": "^0.135",
     "web-ifc-viewer": "^1.0.209",
     "web-vitals": "^2.1.0",
+    "xlsx": "^0.18.5",
     "zustand": "^4.0.0"
   },
   "devDependencies": {
