--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "build-storybook": "shx mkdir -p docs && build-storybook -o docs/sb",
     "build-share": "yarn write-new-version && node config/build.js && yarn build-share-copy-web-asm",
     "build-share-copy-web-asm": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
+    "deps-graph": "npx dependency-cruiser src --include-only 'jsx?' --config --output-type dot | dot -T svg > deps.svg",
     "husky-init": "husky install",
-    "lint": "yarn eslint src",
+    "lint": "yarn eslint src && tsc",
     "precommit": "yarn lint && yarn test",
     "serve": "yarn serve-share",
     "serve-share": "yarn build-share && node config/serve.js",
@@ -70,6 +71,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/react-hooks": "^8.0.1",
+    "@tsconfig/recommended": "^1.0.1",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@types/three": "^0.146.0",
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "cypress": "^10.7.0",
