--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "jest-environment-jsdom": "^28.1.3",
     "jsdom": "^20.0.0",
     "msw": "^0.47.4",
+    "nanoid": "^4.0.0",
     "shx": "^0.3.4",
     "storybook-addon-material-ui": "^0.9.0-alpha.24",
     "storybook-addon-turbo-build": "^1.1.0"
